I have added the global login setup to the framework to avoid logging in everytime an individual test is run
:wq
:wq

:wq

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
+      "@playwrightConfig/*": ["../playwright.config.ts"],
       "@utils/*": ["utils/*"],
       "@factories/*": ["factories/*"],
       "@pages/*": ["pages/*"]
